[project]
name = "mm-toolbox"
version = "1.0.0b4"
description = "High-performance Python tools for market making systems"
readme = "README.md"
authors = [
    { name = "beatzxbt", email = "121855680+beatzxbt@users.noreply.github.com" }
]
requires-python = ">=3.12,<3.14"
license = "MIT"
keywords = ["market making", "hft", "high-frequency trading", "trading", "cython", "performance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed"
]
urls = { homepage = "https://github.com/beatzxbt/mm-toolbox", repository = "https://github.com/beatzxbt/mm-toolbox" }
dependencies = [
    "numpy",
    "picows",
    "ciso8601",
    "msgspec",
    "zmq",
    "aiohttp",
    "xxhash>=3.6.0",
]

[build-system]
requires = [
    "setuptools>=75",
    "wheel",
    "Cython>=3.0.11",
    "numpy>=1.26",
    "picows",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.cibuildwheel]
build = "cp312-* cp313-*"
skip = "*-win* *-manylinux_i686"
test-command = "pytest --maxfail=1 --timeout=300 {project}/tests"
test-requires = ["pytest", "pytest-asyncio", "pytest-timeout", "websockets"]

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }

[dependency-groups]
dev = [
    "ty>=0.0.7",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
    "cython>=3.0.11",
    "uv>=0.8.8",
    "setuptools>=80.9.0",
    "pytest-asyncio>=1.1.0",
    "websockets>=12.0",
]
build = [
    "build>=1.0.0",
    "twine>=5.0.0",
    "cibuildwheel>=2.16.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "boundary: marks boundary condition tests",
    "property: marks property/invariant tests",
    "timeout: marks tests with runtime limits (requires pytest-timeout)",
    "live: marks tests that require live network access",
    "stress: marks tests as stress/load tests",
    "chaos: marks tests with randomized concurrency patterns",
]
